base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kargo-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kargo-demo
  template:
    metadata:
      labels:
        app: kargo-demo
    spec:
      containers:
      - name: httpd 
        image: quay.io/rh-ee-scaps/httpd:2.4.68-1-8
