base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: httpd
spec:
  host: kargo-demo.apps.lab.virer.net
  to:
    kind: Service
    name: httpd
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
